# laptop-registratie

./: .env.example  .gitignore  Dockerfile  Start.md  USER_GUIDE.md  claude.md  compose.yaml  entrypoint.sh  gen-cert.sh  pyproject.toml  test-barcodes.html  update.sh
.claude/: launch.json  settings.local.json
Laptop_Registratie_V2/: .dockerignore  .env  Dockerfile  Start.md  pyproject.toml
Laptop_Registratie_V2/alembic/: env.py
Laptop_Registratie_V2/app/: config.py  db.py  main.py
Laptop_Registratie_V2/docker/: compose.yaml  entrypoint.sh
Laptop_Registratie_V2/laptop_registratie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Laptop_Registratie_V2/students_data/: import_students.csv  import_students_6jaars_delete.csv
Laptop_Registratie_V2/tests/: test_student_import.py
alembic/versions/: 0003_add_laptop_issue_entries.py  0004_add_issue_category.py  0005_add_laptop_linked_at.py  0006_laptop_unlink_history.py  0007_add_laptop_photos.py  0008_add_reserve_laptops.py  0009_add_storage_cabinets.py  0010_add_cabinet_kind.py  0011_add_accessory_returned.py
app/: auth.py  config.py  main.py
app/api/: auth_routes.py  laptop_issues.py  laptops.py  photos.py  (+3 more)
docker/: compose.yaml
laptop_registratie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nginx/: default.conf
students_data/: import_students.csv  import_students_6jaars_delete.csv
tests/: conftest.py  test_auth.py  test_issue_fiche.py  test_laptop_bulk.py  test_laptop_issues_reserve.py  test_laptop_routes.py  test_magazijn.py  test_photo_service.py  test_storage_cabinets.py  test_student_service.py
(+58 files in other folders)
