[project]
name = "laptop-registratie"
version = "2.0.0"
description = "Web application to link laptops to students."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.20,<1.0",
    "pymysql>=1.1,<2.0",
    "uvicorn>=0.35,<1.0",
    "alembic>=1.14,<2.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
    "httpx>=0.28,<1.0",
]
e2e = [
    "pytest>=8.0,<9.0",
    "pytest-playwright>=0.6,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
